# dialektika_backend

./: .gitignore  README.md  config.py  main.py  pyproject.toml  test.py
src/api/: __init__.py  api.py  rest.py
src/auth/: __init__.py  login.py  public_user.py  token.py
src/comments/: __init__.py  comments.py
src/database/: __init__.py  database.py  models.py
src/manage_user/: __init__.py  manageUser.py
src/post_content/: __init__.py  postContent.py
src/storage/: __init__.py  storage.py  storage_type.py
